Week#3 - Add salary analytics